# wallwizard

install/: local_setup.sh  setup.sh
install/audio_capture/lib/audio_capture/: audio_capture_node
install/audio_capture/share/audio_capture/: local_setup.sh  package.sh
install/audio_common/share/audio_common/: local_setup.sh  package.sh
install/audio_common_msgs/share/audio_common_msgs/: local_setup.sh  package.sh
install/audio_play/share/audio_play/: local_setup.sh  package.sh
install/hello_helpers/lib/hello_helpers/: configure_wrist
install/hello_helpers/share/hello_helpers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
install/respeaker_ros2/share/respeaker_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/respeaker_ros2/share/respeaker_ros2/launch/: respeaker.launch.py
install/ros2_numpy/share/ros2_numpy/: local_setup.dsv  (+6 more)
log/: latest_build
src/wall_wizard/: commands.md  experiment.md
src/wall_wizard/src/: aruco_tag_locator.py  aruco_tag_locator_active.py  force_sensor_reader.py  move_base_to_global_pose.py  move_base_to_global_pose1.py  notes.md  planner_mover.py  planner_mover1.py  publish_joint_goals.py  stroke_publisher.py  test_lines.npy  test_lines.py  tf2_listener.py  utils.py
src/wall_wizard/stored_data/: all_movements_adjusted2_less.npy  all_movements_cat2.npy
(+285 files in other folders)
