<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>respeaker_ros2</name>
  <version>0.0.0</version>
  <description>The respeaker_ros2 package</description>
  <maintainer email="cdesai@hello-robot.com">Chintan Desai</maintainer>
  <license>Apache 2.0</license>

  <depend>audio_common_msgs</depend>
  <depend>speech_recognition_msgs</depend>
  <depend>audio_play</depend>
  <depend>sound_play</depend>
  <depend>sound_play_msgs</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>portaudio19-dev</depend>
  <depend>python3-pyaudio</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
